--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "pixi-game-camera",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A non-opinioned implementation for adding cameras to your PIXI application via containers.",
   "main": "index.js",
   "scripts": {
+    "rm:lib": "rm -rf lib",
+    "rm:bundle": "rm -rf pixi-game-camera.js",
     "tsconfig": "tsc --init --declaration --allowSyntheticDefaultImports --target esnext --outDir lib",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "npm run build:types && npm run build:js",
+    "build": "npm run rm:lib && npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "bundle": "rollup -c",
+    "bundle": "npm run rm:bundle && rollup -c",
     "bundle:watch": "rollup -c --watch",
     "test": "node test/server.js",
     "test:custom": "node test/server.js"
@@ -36,23 +38,25 @@
   "module": "pixi-game-camera.js",
   "typings": "lib/index.d.ts",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@types/d3-ease": "^1.0.9",
-    "pixi.js": "^5.2.1",
-    "rollup": "^2.6.1",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/d3-ease": "^2.0.0",
+    "fastify": "^3.5.0",
+    "fastify-static": "^3.2.0",
+    "pixi.js": "^5.3.3",
+    "rollup": "^2.28.2",
     "rollup-plugin-babel": "^4.4.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
-    "d3-ease": "^1.0.6",
-    "hypergiant": "^3.0.5"
+    "d3-ease": "^2.0.0",
+    "hypergiant": "^3.1.0"
   }
 }
